error.txt
dbcalls\Credentials.java:20: error: <identifier> expected
    protected String setCred(setUser, setPass){
                                    ^
dbcalls\Credentials.java:20: error: <identifier> expected
    protected String setCred(setUser, setPass){
    
    
database\Credentials.java:8: error: cannot find symbol
            return name;
                   ^
  symbol:   variable name
  location: class Credentials
dbcalls\Credentials.java:11: error: cannot assign a value to final variable user
            this.user = user;
                ^
dbcalls\Credentials.java:17: error: cannot assign a value to final variable pass
            this.pass = pass;
                ^
dbcalls\Credentials.java:23: error: method setCred in class Credentials cannot be applied to given types;
        return setCred();
               ^
  required: String,String
  found: no arguments
  reason: actual and formal argument lists differ in length
dbcalls\DatabaseConnection.java:23: error: constructor Credentials in class Credentials cannot be applied to given types;
        Credentials cred = new Credentials(username, password);
                           ^
  required: no arguments
  found: String,String
  reason: actual and formal argument lists differ in length
dbcalls\DatabaseConnection.java:35: error: cannot find symbol
        close(ACCConn);
              ^
  symbol:   variable ACCConn
  location: class DatabaseConnection
dbcalls\DatabaseConnection.java:39: error: incompatible types: unexpected return value
        return null;
               ^
